# gst-wpe-webrtc-demo

./: .gitmodules  Cargo.toml  LICENSE  README.md
janus-web-app/: index.html  webrtc.js
src/: app.rs  janus.rs  macros.rs  main.rs  pipeline.rs  settings.rs  utils.rs
